// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayDrawing renders correctly with checkboxForDelete 1`] = `
<section
  className="flex flex-col"
>
  <input
    className="w-3 h-3 lg:w-4 lg:h-4 ml-2 mb-1 border border-superLightGray"
    data-testid="delete"
    id="delete"
    name="delete"
    onChange={[Function]}
    type="checkbox"
  />
  <li
    className="border border-superLightGray list-none rounded-xl shadow-lg cursor-pointer overflow-hidden hover:-translate-y-1 hover:brightness-125 transition-all delay-150 duration-300 ease-in-out"
    onClick={[Function]}
  >
    <img
      alt="test"
      className="w-full h-[246px] md:h-[185px] lg:h-[158px]"
      src="https://res.cloudinary.com"
    />
    <div
      className="flex items-center justify-center md:flex-col gap-x-2 md:gap-x-0 p-1 md:p-2 lg:p-3"
    >
      <p
        className="mb-1 md:mb-2 text-xs md:text-sm lg:text-base font-semibold"
      >
        test
      </p>
      <div
        className="flex items-center justify-center shrink-0"
      >
        <div>
          <img
            alt="test"
            className="w-4 md:w-5 lg:w-6 h-4 md:h-5 lg:h-6 rounded-full mr-0 md:mr-1 lg:mr-2"
            src="https://res.cloudinary.com"
          />
        </div>
        <span
          className="hidden md:block text-xs md:text-sm"
        >
          test
        </span>
      </div>
    </div>
  </li>
</section>
`;

exports[`DisplayDrawing renders correctly without checkboxForDelete 1`] = `
<section
  className="flex flex-col"
>
  <li
    className="border border-superLightGray list-none rounded-xl shadow-lg cursor-pointer overflow-hidden hover:-translate-y-1 hover:brightness-125 transition-all delay-150 duration-300 ease-in-out"
    onClick={[Function]}
  >
    <img
      alt="test"
      className="w-full h-[246px] md:h-[185px] lg:h-[158px]"
      src="https://res.cloudinary.com"
    />
    <div
      className="flex items-center justify-center md:flex-col gap-x-2 md:gap-x-0 p-1 md:p-2 lg:p-3"
    >
      <p
        className="mb-1 md:mb-2 text-xs md:text-sm lg:text-base font-semibold"
      >
        test
      </p>
      <div
        className="flex items-center justify-center shrink-0"
      >
        <div>
          <img
            alt="test"
            className="w-4 md:w-5 lg:w-6 h-4 md:h-5 lg:h-6 rounded-full mr-0 md:mr-1 lg:mr-2"
            src="https://res.cloudinary.com"
          />
        </div>
        <span
          className="hidden md:block text-xs md:text-sm"
        >
          test
        </span>
      </div>
    </div>
  </li>
</section>
`;
